# sin-lib-template

./: CMakeLists.txt  README.md  library-name-config.cmake.in
inc/: lib.h
src/: lib.c
test/: CMakeLists.txt  test.cpp
